--- a/style.css
+++ b/style.css
@@ -15,18 +15,21 @@
 
 body {
   font-family: "Roboto", sans-serif;
+  font-size: 18px;
 }
 
 header {
   background: var(--dark-blue);
   color: var(--white);
-  font-size: 18px;
   padding: 16px 32px;
 }
 
-nav {
+.width-cap {
   max-width: 1080px;
   margin: 0 auto;
+}
+
+nav {
   display: flex;
   justify-content: space-between;
 }
@@ -44,8 +47,6 @@ nav {
 }
 
 .hero {
-  max-width: 1080px;
-  margin: 0 auto;
   padding: 96px 0;
   display: flex;
   gap: 32px;
@@ -80,4 +81,36 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.section-images {
+  text-align: center;
+  padding: 48px 32px 128px 32px;
+}
+
+.section-images h2 {
+  color: var(--dark-blue);
+  font-size: 36px;
+  font-weight: 900;
+  margin-bottom: 48px;
+}
+
+.items-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 64px;
+}
+
+.item {
+  color: dimgray;
+  width: 176px;
+}
+
+.item-image {
+  border: 4px solid var(--blue);
+  border-radius: 20px;
+  width: 176px;
+  height: 176px;
+  margin-bottom: 8px;
 }
