--- a/style.css
+++ b/style.css
@@ -78,6 +78,8 @@ nav {
 
 .hero-image {
   background: gray;
+  text-align: center;
+  padding: 8px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,4 +170,12 @@ nav {
   font-size: 18px;
   font-weight: 700;
   padding: 8px 32px;
+  flex-shrink: 0;
+}
+
+footer {
+  color: var(--white);
+  background-color: var(--dark-blue);
+  text-align: center;
+  padding: 32px;
 }
